k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nextjs-deployment

spec:
  replicas: 3

  selector:
    matchLabels:
      app: nextjs-web

  template:
    metadata:
      labels:
        app: nextjs-web

    spec:
      containers:
        - name: nextjs-container
          image: nextjs-web:v1

          ports:
            - containerPort: 80

          resources:
            requests:
              memory: "128Mi"
              cpu: "100m"
            limits:
              memory: "256Mi"
              cpu: "500m"
