k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nextjs-service

spec:
  selector:
    app: nextjs-web

  ports:
    - port: 80
      protocol: TCP
      targetPort: 80
